# we-get

./: .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  process.sh  processed.json  pyproject.toml  unprocessed.json
.github/rulesets/: branch-naming.json  master-protection.json
.github/workflows/: ci.yml
agents/_base/: pyproject.toml
agents/_base/src/agents_base/: __init__.py  agent.py  audit.py  config.py
agents/_base/tests/: test_agent.py
agents/architect/: pyproject.toml
agents/devops/: pyproject.toml
agents/engineer/: pyproject.toml
agents/pm/: pyproject.toml
agents/pm/src/pm/: worker.py
agents/pm/tests/: test_worker.py
agents/qa/: pyproject.toml
agents/reviewer/: pyproject.toml
docs/: architecture.md
docs/runbooks/: incident-response.md
infrastructure/argocd-apps/: applicationset.yaml  project.yaml
infrastructure/mcp/: deployments.yaml
infrastructure/platform/: namespaces.yaml  postgres.yaml  qdrant.yaml  rabbitmq.yaml
infrastructure/runtime/: orchestrator.yaml  services.yaml
orchestrator/: Dockerfile  pyproject.toml
orchestrator/src/orchestrator/: config.py  graph.py  routing.py  server.py  state.py
orchestrator/src/orchestrator/nodes/: __init__.py  architect.py  devops.py  engineer.py  gates.py  pm.py  qa.py  reviewer.py
orchestrator/tests/: test_graph.py  test_nodes.py  test_routing.py  test_server.py
services/approval-service/: pyproject.toml
services/approval-service/src/approval_service/: config.py  models.py  server.py  slack.py
services/approval-service/tests/: test_server.py
services/pr-orchestrator/: pyproject.toml
services/pr-orchestrator/src/pr_orchestrator/: config.py  handlers.py  models.py  server.py
services/pr-orchestrator/tests/: test_server.py
tests/services/: test_approval_server.py  test_approval_slack.py  test_pr_handlers.py
we_get/core/: utils.py
