[project]
name = "agents-base"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.28",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "langfuse>=2.30",
    "psycopg[binary]>=3.1",
    "tenacity>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_base"]
