[project]
name = "agent-qa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agents-base",
    "aio-pika>=9.4",
    "structlog>=24.1",
]

[tool.uv.sources]
agents-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa"]
